tests/ui/abi3_inheritance.stderr
error[E0277]: the trait bound `PyException: PyClassBaseType` is not satisfied
 --> tests/ui/abi3_inheritance.rs:4:19
  |
4 | #[pyclass(extends=PyException)]
  |                   ^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyException`, which is required by `PyException: PyClassBaseType`
  |
  = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
  = help: the trait `PyClassBaseType` is implemented for `PyAny`
  = note: required for `PyException` to implement `PyClassBaseType`
note: required by a bound in `PyClassImpl::BaseType`
 --> src/impl_/pyclass.rs
  |
  |     type BaseType: PyTypeInfo + PyClassBaseType;
  |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`

error[E0277]: the trait bound `PyException: PyClass` is not satisfied
 --> tests/ui/abi3_inheritance.rs:4:1
  |
4 | #[pyclass(extends=PyException)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyException`, which is required by `PyException: PyClassBaseType`
  |
  = help: the trait `PyClass` is implemented for `MyException`
  = note: required for `PyException` to implement `PyClassBaseType`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
